--- a/style.css
+++ b/style.css
@@ -1,5 +1,179 @@
+:root {
+    --header-white: rgb(243, 237, 237);
+    --sidebar-blue: rgb(69, 69, 231);
+    --main-gray: rgb(217, 212, 212);
+}
+
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+.container {
+    height: 100vh;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+}
+
+.header {
+    grid-column: 2 / 6;
+    background-color: var(--header-white);
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(12, 1fr);
+    justify-items: center;
+    align-items: center;
+}
+
+.header input {
+    grid-area: 3 / 2 / 5 / 7;
+    background-color: var(--main-gray);
+    border: none;
+    border-radius: 10px;
+    padding-left: 5px;
+    height: 40px;
+    justify-self: stretch;
+}
+
+.header input:focus {
+    border: var(--main-gray);
+}
+
+.header .header-right-container {
+    grid-area: 3 / -3 / 5 / -5;
+    justify-self: end;
+    display: flex;
+    align-items: center;
+    font-weight: bold;
+    font-size: calc(10px + 0.5vw);
+}
+
+.header-right-container .rss {
+    height: 25px;
+    width: 25px;
+    margin-right: 50px;
+}
+
+.header-right-container .profile {
+    height: 40px;
+    width: 40px;
+    margin-right: 10px;
+}
+
+.bottom-text-container {
+    grid-area: 9 / 2 / 11 / 5;
+    justify-self: start;
+    display: flex;
+    align-items: center;
+}
+
+.bottom-text-container img {
+    height: 80px;
+    width: 80px;
+}
+
+.bottom-text-container .text-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.text-container .first-para {
+    font-size: calc(7px + 0.5vw);
+    font-weight: bold;
+}
+
+.text-container .second-para {
+    font-size: calc(20px + 0.5vw);
+    font-weight: bold;
+}
+
+.bottom-buttons-container {
+    grid-area: 9 / 8 / 11 / 11;
+    justify-self: end;
+    display: flex;
+    gap: calc(10px + 2vw);
+}
+
+.bottom-buttons-container button {
+    background-color: var(--sidebar-blue);
+    color: var(--header-white);
+    width: calc(50px + 5vw);
+    border: none;
+    border-radius: 20px;
+    font-size: 25px;
+    padding: 10px;
+}
+
+.sidebar {
+    grid-area: 1 / 1 / 6 / 2;
+    background-color: var(--sidebar-blue);
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(20, 1fr);
+    align-items: center;
+    justify-items: start;
+    font-size: calc(1rem + 1vw);
+}
+
+.sidebar a {
+    padding: 0 1rem;
+    color: var(--header-white);
+    text-decoration: none;
+}
+
+.sidebar a:hover {
+    color: var(--main-gray);
+    text-decoration: underline;
+}
+
+.sidebar .dashboard {
+    grid-row: 1 / 3;
+    font-size: calc(1.2rem + 1vw);
+}
+
+.sidebar .nav-first {
+    grid-row: 5 / 11;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(6, 1fr);
+    gap: 10px;
+    justify-items: start;
+}
+
+.sidebar .nav-second {
+    grid-row: 13 / 16;
+    margin-top: calc(50px - 2vh);
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 1fr);
+    gap: 10px;
+    justify-items: start;
+}
+
+.main {
+    grid-area: 2 / 2 / 6 / 6;
+    background-color: var(--main-gray);
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.main-left-header {
+    grid-column: 1 / 2;
+}
+
+.main .main-left {
+    grid-column: 1 / 3;
+    display: grid;
+}
+
+.main-left > div {
+    height: 20px;
+    background-color: var(--header-white);
+}
+
+.main .main-right {
+    grid-column: 3 / 4;
 }
 
