--- a/style-2.css
+++ b/style-2.css
@@ -128,6 +128,33 @@ body {
 .main {
     grid-row: 2 / 3;
     background-color: var(--main-gray);
+    display: grid;
+    grid-template-columns: 4fr 1fr;
+}
+
+.main-left-section {
+    display: grid;
+    grid-template-rows: 1fr 10fr;
+}
+
+.main-left-section .heading-pro {
+    align-self: end;
+    justify-self: start;
+    font-family: inherit;
+    font-size: 20px;
+    font-weight: bold;
+
+}
+
+.main .projects {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
+
+.main .projects > div {
+    width: 250px;
+    height: 250px;
+    background-color: var(--header-white);
 }
 
 
