--- a/style-2.css
+++ b/style-2.css
@@ -36,7 +36,7 @@ body {
 .header-main-container {
     grid-column: 2 / 3;
     display: grid;
-    grid-template-rows: 1.2fr 4fr;
+    grid-template-rows: 185px 1fr;
 }
 
 .header {
@@ -129,12 +129,12 @@ body {
     grid-row: 2 / 3;
     background-color: var(--main-gray);
     display: grid;
-    grid-template-columns: 4fr 1fr;
+    grid-template-columns: 4fr 1.5fr;
 }
 
 .main-left-section {
     display: grid;
-    grid-template-rows: 1fr 10fr;
+    grid-template-rows: 55px 1fr;
 }
 
 .main-left-section .heading-pro {
@@ -143,19 +143,69 @@ body {
     font-family: inherit;
     font-size: 20px;
     font-weight: bold;
+    padding-left: 1vw;
 
 }
 
-.main .projects {
+.main-left-section .projects {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    justify-items: start;
+    align-items: center;
+    padding: 0.5vw 1vw;
+    gap: 1vw;
 }
 
-.main .projects > div {
-    width: 250px;
+.projects .project {
+    width: 350px;
     height: 250px;
+    border-radius: 15px;
     background-color: var(--header-white);
+    padding: 1.5vw 1vw;
+    display: flex;
+    flex-direction: column;
+
 }
 
+.project-text {
+    display: flex;
+    flex-direction: column;
+    align-content: flex-start;
+    gap: 4px;
+}
+
+.project-text > p:first-child {
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.project .project-buttons {
+    margin-top: auto;
+    align-self: flex-end;
+}
+
+.main-right-section {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+}
+
+.main-right-section .main-ann {
+    display: grid;
+    grid-template-rows: 55px 1fr;
+}
+
+.main-ann .heading-ann,
+.main-trend .heading-trend {
+    align-self: end;
+    justify-self: start;
+    font-family: inherit;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.main-right-section .main-trend {
+    display: grid;
+    grid-template-rows: 55px 1fr;
+}
 
 
