--- a/style-2.css
+++ b/style-2.css
@@ -208,4 +208,60 @@ body {
     grid-template-rows: 55px 1fr;
 }
 
+.main-right-section .announcements {
+    display: flex;
+    flex-direction: column;
+    font-family: inherit;
+    justify-content: space-around;
+    padding: 0px 10px;
+    background-color: var(--header-white);
+    border-radius: 15px;
+}
+
+.announcements .ann:not(:last-child) {
+    display: flex;
+    flex-direction: column;
+    border-bottom: 0.5px solid black;
+    padding-bottom: 10px;
+}
+
+.ann > p:first-child {
+    font-weight: bold;
+}
+
+
+.main-trend img {
+    height: 50px;
+    width: 50px;
+}
+
+.trending {
+    display: flex;
+    flex-direction: column;
+    font-family: inherit;
+    justify-content: space-around;
+    padding: 0px 10px;
+    background-color: var(--header-white);
+    border-radius: 15px;
+}
+
+.trend {
+    display: grid;
+    grid-template-columns: 50px 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+
+.trend .user-pic {
+    grid-area: 1 / 1 / 3 / 2;
+    justify-self: end;
+    align-self: center;
+}
+
+.trend .user-id {
+    grid-area: 1 / 2 / 2 / 3;
+}
+
+.trend .user-text {
+    grid-area: 2 / 2 / 3 / 3;
+}
 
