--- a/style-2.css
+++ b/style-2.css
@@ -134,7 +134,7 @@ body {
 
 .main-left-section {
     display: grid;
-    grid-template-rows: 55px 1fr;
+    grid-template-rows: 40px 1fr;
 }
 
 .main-left-section .heading-pro {
@@ -151,8 +151,8 @@ body {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     justify-items: start;
-    align-items: center;
-    padding: 0.5vw 1vw;
+    align-items: start;
+    padding: 0.5vw 0 0.5vw 1vw;
     gap: 1vw;
 }
 
@@ -191,7 +191,7 @@ body {
 
 .main-right-section .main-ann {
     display: grid;
-    grid-template-rows: 55px 1fr;
+    grid-template-rows: 40px 1fr;
 }
 
 .main-ann .heading-ann,
@@ -212,10 +212,11 @@ body {
     display: flex;
     flex-direction: column;
     font-family: inherit;
-    justify-content: space-around;
-    padding: 0px 10px;
+    justify-content: space-around; 
     background-color: var(--header-white);
     border-radius: 15px;
+    padding: 5px 10px;
+    margin: 0.5vw 1vw 0 0;
 }
 
 .announcements .ann:not(:last-child) {
@@ -243,6 +244,7 @@ body {
     padding: 0px 10px;
     background-color: var(--header-white);
     border-radius: 15px;
+    margin: 0.5vw 1vw 0.5vw 0;
 }
 
 .trend {
