--- a/style.css
+++ b/style.css
@@ -1,179 +1,323 @@
-:root {
-    --header-white: rgb(243, 237, 237);
-    --sidebar-blue: rgb(69, 69, 231);
-    --main-gray: rgb(217, 212, 212);
-}
-
 * {
-    margin: 0;
     padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
 
-.container {
+@font-face {
+    font-family: roboto-regular;
+    src: url(./assets/fonts/Roboto/Roboto-Regular.ttf);
+}
+
+:root {
+    --sidebar-blue: #3b82f6;
+    --header-white: #f1f5f9;
+    --main-gray: #d1d5db;
+    font-family: roboto-regular;
+}
+
+body {
     height: 100vh;
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(5, 1fr);
+    grid-template-columns: 1fr 5fr;
+}
+
+
+button:hover {
+    cursor: pointer;
+}
+
+.sidebar {
+    grid-column: 1 / 2;
+    background-color: var(--sidebar-blue);
+    font-family: inherit;
+    font-size: calc(1rem + 1vw);
+    padding-left: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+}
+
+.sidebar > ul {
+    list-style: none;
+}
+
+.sidebar  a {
+    color: var(--header-white);
+    text-decoration: none;
+}
+
+.dashboard {
+    margin-top: 15px;
+    font-size: calc(2rem + 1vw);
+}
+
+.nav-first, .nav-second {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.sidebar a:hover {
+    text-decoration: underline;
+}
+
+.header-main-container {
+    grid-column: 2 / 3;
+    display: grid;
+    grid-template-rows: 185px 1fr;
 }
 
 .header {
-    grid-column: 2 / 6;
+    font-family: inherit;
+    grid-row: 1 / 2;
     background-color: var(--header-white);
     display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(12, 1fr);
-    justify-items: center;
+    grid-template-columns: 3fr 2fr 1fr;
+    grid-template-rows: 1fr 1fr;
     align-items: center;
+
 }
 
 .header input {
-    grid-area: 3 / 2 / 5 / 7;
+    grid-area: 1 / 1 / 2 / 2;
     background-color: var(--main-gray);
     border: none;
     border-radius: 10px;
     padding-left: 5px;
     height: 40px;
-    justify-self: stretch;
+    width: 80%;
+    justify-self: center;
 }
 
-.header input:focus {
-    border: var(--main-gray);
-}
-
-.header .header-right-container {
-    grid-area: 3 / -3 / 5 / -5;
+.header-right-container {
+    width: 70%;
+    grid-area: 1 / 2 / 2 / 3;
     justify-self: end;
     display: flex;
+    justify-content: flex-end;
     align-items: center;
-    font-weight: bold;
-    font-size: calc(10px + 0.5vw);
+    font-size: calc(10px + 1vw);
 }
 
 .header-right-container .rss {
-    height: 25px;
-    width: 25px;
-    margin-right: 50px;
+    margin-right: auto;
+    height: 30px;
+    width: 30px;
 }
 
 .header-right-container .profile {
-    height: 40px;
-    width: 40px;
-    margin-right: 10px;
-}
-
-.bottom-text-container {
-    grid-area: 9 / 2 / 11 / 5;
-    justify-self: start;
-    display: flex;
-    align-items: center;
-}
-
-.bottom-text-container img {
     height: 80px;
     width: 80px;
 }
 
-.bottom-text-container .text-container {
+.bottom-text-container {
+    grid-area: 2 / 1 / 3 / 2;
+    justify-self: center;
+    width: 80%;
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
 }
 
-.text-container .first-para {
-    font-size: calc(7px + 0.5vw);
+.bottom-text-container .profile {
+    height: 80px;
+    width: 80px;
+}
+
+.bottom-text-container .first-para {
+    font-size: calc(3px + 1vw);
     font-weight: bold;
 }
 
-.text-container .second-para {
-    font-size: calc(20px + 0.5vw);
+.bottom-text-container .second-para {
+    font-size: calc(10px + 1vw);
     font-weight: bold;
 }
 
 .bottom-buttons-container {
-    grid-area: 9 / 8 / 11 / 11;
+    width: 100%;
+    grid-area: 2 / 2 / 3 / 3;
     justify-self: end;
     display: flex;
-    gap: calc(10px + 2vw);
+    justify-content: space-between;
 }
 
 .bottom-buttons-container button {
+    font-family: inherit;
     background-color: var(--sidebar-blue);
     color: var(--header-white);
-    width: calc(50px + 5vw);
+    width: calc(50px + 6vw);
     border: none;
-    border-radius: 20px;
-    font-size: 25px;
-    padding: 10px;
-}
-
-.sidebar {
-    grid-area: 1 / 1 / 6 / 2;
-    background-color: var(--sidebar-blue);
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(20, 1fr);
-    align-items: center;
-    justify-items: start;
-    font-size: calc(1rem + 1vw);
-}
-
-.sidebar a {
-    padding: 0 1rem;
-    color: var(--header-white);
-    text-decoration: none;
-}
-
-.sidebar a:hover {
-    color: var(--main-gray);
-    text-decoration: underline;
-}
-
-.sidebar .dashboard {
-    grid-row: 1 / 3;
-    font-size: calc(1.2rem + 1vw);
-}
-
-.sidebar .nav-first {
-    grid-row: 5 / 11;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(6, 1fr);
-    gap: 10px;
-    justify-items: start;
-}
-
-.sidebar .nav-second {
-    grid-row: 13 / 16;
-    margin-top: calc(50px - 2vh);
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(3, 1fr);
-    gap: 10px;
-    justify-items: start;
+    border-radius: calc(20px + 1vw);
+    font-size: calc(15px + 1vw);
+    padding: 7px;
 }
 
 .main {
-    grid-area: 2 / 2 / 6 / 6;
+    grid-row: 2 / 3;
     background-color: var(--main-gray);
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 4fr 1.5fr;
 }
 
-.main-left-header {
-    grid-column: 1 / 2;
-}
-
-.main .main-left {
-    grid-column: 1 / 3;
+.main-left-section {
     display: grid;
+    grid-template-rows: 40px 1fr;
 }
 
-.main-left > div {
-    height: 20px;
+.main-left-section .heading-pro {
+    align-self: end;
+    justify-self: start;
+    font-family: inherit;
+    font-size: 20px;
+    font-weight: bold;
+    padding-left: 1vw;
+
+}
+
+.main-left-section .projects {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    justify-items: start;
+    align-items: start;
+    padding: 0.5vw 0 0.5vw 1vw;
+    gap: 1vw;
+}
+
+.projects .project {
+    width: 350px;
+    height: 250px;
+    border-radius: 15px;
+    background: linear-gradient(to right, #fbbf24 2.8%, var(--header-white) 0%);
+    padding: 1.5vw 1vw;
+    display: flex;
+    flex-direction: column;
+
+}
+
+.project-text {
+    display: flex;
+    flex-direction: column;
+    align-content: flex-start;
+    gap: 4px;
+}
+
+.project-text > p:first-child {
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.project-text > p:nth-child(2) {
+    opacity: 0.6;
+}
+
+.project .project-buttons {
+    margin-top: auto;
+    align-self: flex-end;
+    display: flex;
+    gap: 10px;
+}
+
+.project-buttons button {
     background-color: var(--header-white);
+    border: none;
 }
 
-.main .main-right {
-    grid-column: 3 / 4;
+.project-buttons button:hover {
+    cursor: pointer;
+}
+
+.project-buttons svg {
+    height: 25px;
+    width: 25px;
+}
+
+.main-right-section {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+}
+
+.main-right-section .main-ann {
+    display: grid;
+    grid-template-rows: 40px 1fr;
+}
+
+.main-ann .heading-ann,
+.main-trend .heading-trend {
+    align-self: end;
+    justify-self: start;
+    font-family: inherit;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.main-right-section .main-trend {
+    display: grid;
+    grid-template-rows: 55px 1fr;
+}
+
+.main-right-section .announcements {
+    display: flex;
+    flex-direction: column;
+    font-family: inherit;
+    justify-content: space-around; 
+    background-color: var(--header-white);
+    border-radius: 15px;
+    padding: 5px 10px;
+    margin: 0.5vw 1vw 0 0;
+}
+
+.announcements .ann:not(:last-child) {
+    display: flex;
+    flex-direction: column;
+    border-bottom: 0.5px solid black;
+    padding-bottom: 10px;
+}
+
+.ann > p:first-child {
+    font-weight: bold;
+}
+
+.ann > p:nth-child(2) {
+    opacity: 0.6;
+}
+
+
+.main-trend img {
+    height: 50px;
+    width: 50px;
+}
+
+.trending {
+    display: flex;
+    flex-direction: column;
+    font-family: inherit;
+    justify-content: space-around;
+    padding: 0px 10px;
+    background-color: var(--header-white);
+    border-radius: 15px;
+    margin: 0.5vw 1vw 0.5vw 0;
+}
+
+.trend {
+    display: grid;
+    grid-template-columns: 50px 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+
+.trend .user-pic {
+    grid-area: 1 / 1 / 3 / 2;
+    justify-self: end;
+    align-self: center;
+}
+
+.trend .user-id {
+    grid-area: 1 / 2 / 2 / 3;
+}
+
+.trend .user-text {
+    grid-area: 2 / 2 / 3 / 3;
+    opacity: 0.6;
 }
 
